fixed images so theyre not distorted on posts

--- a/client/pet-lost-and-found-react/src/Posts.css
+++ b/client/pet-lost-and-found-react/src/Posts.css
@@ -14,6 +14,7 @@
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  object-fit: cover;
 }
 .card {
   display: flex;
